--- a/src/views/Search/style.css
+++ b/src/views/Search/style.css
@@ -1,7 +1,16 @@
 .search {
-    height: 100%;
     display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.search--center {
     justify-content: center;
     align-items: center;
-    width: 100%;
+    height: 100vh;
+}
+
+.search--top {
+    justify-content: center;
+    align-items: flex-start;
 }
